# prism-bar

./: Cargo.toml  PKGBUILD  README.md
resources/: default-config.kdl
src/: config.rs  main.rs  menu.rs  sysmon.rs  toplevels.rs  tray.rs  ui.rs  workspaces.rs
