[package]
name = "prism-bar"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Status bar for the prism compositor — damascene-rendered, layer-shell native"
repository = "https://github.com/computer-whisperer/prism-bar"
authors = ["Christian Balcom"]

[dependencies]
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# wayland client stack — same harness as prism-bg: SCTK covers
# registry/output/seat/layer-shell boilerplate, calloop drives the loop.
smithay-client-toolkit = { version = "0.20", default-features = false, features = ["calloop"] }
wayland-client = "0.31"
# The system libwayland backend is required: wgpu's Vulkan WSI takes raw
# `wl_display`/`wl_surface` pointers, which the pure-Rust backend can't give.
wayland-backend = { version = "0.3", features = ["client_system"] }
# State protocols, hand-wired (SCTK has no helpers for these):
# ext-workspace-v1 (workspace strip) and wlr-foreign-toplevel-management
# (focused window title). Both optional at runtime — the bar degrades
# gracefully when the compositor doesn't advertise them.
wayland-protocols = { version = "0.32.12", features = ["client", "staging"] }
wayland-protocols-wlr = { version = "0.3", features = ["client"] }

# UI toolkit. The winit host is bypassed: we own the layer surface and
# event loop, and drive the wgpu Runner directly (custom-host path).
damascene-core = "0.4.1"
damascene-wgpu = "0.4.1"

# GPU surface on the layer surface's wl_surface via raw handles.
wgpu = "29"
raw-window-handle = "0.6"
pollster = "0.4"

# Local time for the clock module.
chrono = { version = "0.4", default-features = false, features = ["clock"] }

# KDL config, same stack as prism-config (knuffel + miette diagnostics).
knuffel = "3.2.0"
miette = { version = "5.10.0", features = ["fancy-no-backtrace"] }

# statvfs for the disk module.
rustix = { version = "1", features = ["fs"] }
